--- a/landing-page/package.json
+++ b/landing-page/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "hover-effect": "^1.1.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "sass": "^1.52.0",
+    "swiper": "^8.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
